take img for stories from cms

--- a/content/story/2020-04-18-testing.md
+++ b/content/story/2020-04-18-testing.md
@@ -3,7 +3,9 @@ templateKey: story
 title: TESTING
 date: 2020-04-18T16:12:22.009Z
 description: description
-image: /img/leaves.jpeg
+storyImage:
+  image: /img/leaves.jpeg
+  alt: story image
 ---
 
 sdflkjsdfkjsjdfgsjhdfg
