--- a/content/story/2020-04-18-testing.md
+++ b/content/story/2020-04-18-testing.md
@@ -3,8 +3,7 @@ templateKey: story
 title: TESTING
 date: 2020-04-18T16:12:22.009Z
 description: description
-image: /img/leaves.jpeg
-storyImage: /img/arita-1.jpg
+image: /img/arita-1.jpg
 ---
 
 sdflkjsdfkjsjdfgsjhdfg
