Update Stories “2020-10-04-test”

--- a/content/story/2020-10-04-test.md
+++ b/content/story/2020-10-04-test.md
@@ -3,6 +3,6 @@ templateKey: story
 title: Test
 date: 2020-03-02T20:15:47.403Z
 image: /img/home3.jpg
-imageCredits: photo by Zigmas B. Katinas
+imageCredits: ""
 ---
 Test
