add imageCredits field

--- a/content/story/2020-04-18-testing.md
+++ b/content/story/2020-04-18-testing.md
@@ -4,5 +4,6 @@ title: Story 2
 date: 2020-04-18T16:12:22.009Z
 description: description
 image: /img/arita-1.jpg
+imageCredits: ""
 ---
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam doloribus dolorum error facilis magnam, nihil nisi non praesentium, qui, recusandae ullam voluptates. Eaque eveniet harum, minus molestiae numquam quam quo!
