update menu item translation

--- a/src/translations/lt.json
+++ b/src/translations/lt.json
@@ -1,7 +1,7 @@
 {
   "seoKeywords": "radijo dokumentika, radijas, audio, mokymai, vienkartinė planeta",
   "stories": "Pasakojimai",
-  "audio": "Įrašai",
+  "audio": "Audio",
   "about": "Apie",
   "contact": "Kontaktai",
   "homepage": "Į pradžią",
