--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -6,5 +6,13 @@
   "contact": "Contact",
   "homepage": "Homepage",
   "404Title": "Not found",
-  "404Content": "You just hit a route that doesn&#39;t exist."
+  "404Content": "You just hit a route that doesn&#39;t exist.",
+  "comment": "Comment",
+  "comments": "Comments",
+  "name": "Name",
+  "submitComment": "Submit",
+  "submitReply": "Submit reply",
+  "cancel": "Cancel",
+  "reply": "Reply",
+  "back": "Back"
 }
